Refactored everything according to feedback

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 spring:
   application:
     name: database
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://dev-6gonohusakhjykxh.us.auth0.com/
+          audiences: https://dev-6gonohusakhjykxh.us.auth0.com/api/v2/
   datasource:
     url: jdbc:mysql://localhost:3306/testingDB
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -8,7 +14,7 @@ spring:
     password: Log!n147
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     format-sql: true
 
