--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.6.2'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.1'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.4'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.3.3'
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.4'
 }
 
 tasks.named('test') {
