--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,10 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.6.2'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.1'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.4'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.3.3'
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.4'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 }
 
 tasks.named('test') {
